--- a/thing.htm
+++ b/thing.htm
@@ -1,6 +1,6 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html>
-<body>
-<h1 color="red" background-color="pink">piss</h1>
-</body>
+  <body>
+    <h1 color="red" background-color="pink">piss</h1>
+  </body>
 </html>
