--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
   <body>
-    <h1 style="color: red; background-color: pink; font-size: 100px;">EPIC!!!</h1>
+    <h1 style="color: red; background-color: pink; font-size: 100px; font-family: Alfa Slab One;">EPIC!!!</h1>
   </body>
 </html>
