--- a/index.html
+++ b/index.html
@@ -1,5 +1,8 @@
 <!DOCTYPE html>
 <html>
+  <head> 
+  <link href="https://fonts.googleapis.com/css?family=Alfa+Slab+One&display=swap" rel="stylesheet"> 
+  </head>
   <body>
     <h1 style="color: red; background-color: pink; font-size: 100px; font-family: Alfa Slab One;">EPIC!!!</h1>
   </body>
