--- a/index.html
+++ b/index.html
@@ -4,6 +4,12 @@
   <link href="https://fonts.googleapis.com/css?family=Alfa+Slab+One&display=swap" rel="stylesheet"> 
   </head>
   <body>
-    <h1 style="color: red; background-color: pink; font-size: 100px; font-family: Alfa Slab One;">EPIC!!!</h1>
+    <h1 style="color: red; font-size: 100px; font-family: Alfa Slab One;">EPIC!!!</h1>
   </body>
+  
+  <style>
+    body {
+    background-color: hot-pink;
+    }
+  </style>
 </html>
