--- a/index.html
+++ b/index.html
@@ -4,12 +4,17 @@
   <link href="https://fonts.googleapis.com/css?family=Alfa+Slab+One&display=swap" rel="stylesheet"> 
   </head>
   <body>
-    <h1 style="color: red; font-size: 100px; font-family: Alfa Slab One;">EPIC!!!</h1>
+    <a id="header" href="https://thog10million.github.io/oliver-and-ethans-web-design-project/index.html">MAIN PAGE</a> 
+    <h2 style="color: red; font-size: 100px; font-family: Alfa Slab One;">EPIC!!!</h2>
   </body>
   
   <style>
     body {
     background-color: Fuchsia;
+    }
+   
+    #header {
+      padding: 20px, 200px;
     }
   </style>
 </html>
