Update and rename minecrafc.html to minecraft.html

--- a/minecraft.html
+++ b/minecraft.html
@@ -1,7 +1,7 @@
 <body>
   <div id="nav-bar">
-    <div class="gridthing">main</div>
-    <div class="gridthing">minecraft pk</div>
+    <div class="gridthing" href="index.html">main</div>
+    <div class="gridthing" href="minecraft.html">minecraft pk</div>
     <div class="gridthing">crack cocaine</div>
   </div>
   <div id="header">
