--- a/index.html
+++ b/index.html
@@ -4,12 +4,13 @@
   <link href="https://fonts.googleapis.com/css?family=Alfa+Slab+One&display=swap" rel="stylesheet"> 
   </head>
   <body>
-    <h2 style="color: red; font-size: 100px; font-family: Alfa Slab One;">EPIC!!!</h2>
+    <h2 style="color:black; font-size: 100px; font-family: Alfa Slab One;">THIS IS THE HOME PACHE!!!!</h2>
+    <h2 href="minecraft.html">click heer</h2>
   </body>
   
   <style>
     body {
-    background-color: Fuchsia;
+    background-color: Gray;
     }
   </style>
 </html>
