--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
   <link href="https://fonts.googleapis.com/css?family=Alfa+Slab+One&display=swap" rel="stylesheet"> 
   </head>
   <body>
+    <div id="nav-bar">
+      <div class="gridthing" href="index.html">main</div>
+      <div class="gridthing" href="minecraft.html">minecraft pk</div>
+      <div class="gridthing">crack cocaine</div>
+    </div>
     <h2 style="color:black; font-size: 100px; font-family: Alfa Slab One;">THIS IS THE HOME PACHE!!!!</h2>
     <h2 href="minecraft.html">click heer</h2>
   </body>
@@ -13,4 +18,17 @@
     background-color: Gray;
     }
   </style>
+  
+    #nav-bar {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    margin: 30px;
+  }
+  
+    .gridthing {
+    border: 1px solid #000000;
+    margin: auto 1px;
+    text-align: center;
+    padding: 10px 0;
+  }
 </html>
