--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       <div class="gridthing">crack cocaine</div>
     </div>
     <h2 style="color:black; font-size: 100px; font-family: Alfa Slab One;">THIS IS THE HOME PACHE!!!!</h2>
-    <h2 href="minecraft.html">click heer</h2>
+    <h2 href="https://thog10million.github.io/oliver-and-ethans-web-design-project/minecraft.html">click heer</h2>
   </body>
   
   <style>
