--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
   </head>
   <body>
     <div id="nav-bar">
-      <div class="gridthing" href="https://thog10million.github.io/oliver-and-ethans-web-design-project/index.html">main</div>
-      <div class="gridthing" href="https://thog10million.github.io/oliver-and-ethans-web-design-project/minecraft.html">minecraft pk</div>
+      <a href="index.html"><div class="gridthing">main</div></a>
+      <a href="minecraft.html"><div class="gridthing">minecraft pk</div></a>
       <div class="gridthing">crack cocaine</div>
     </div>
     <h2 style="color:black; font-size: 100px; font-family: Alfa Slab One;">THIS IS THE HOME PACHE!!!!</h2>
