--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <body>
     <div id="nav-bar">
       <a href="index.html"><div class="gridthing">main</div></a>
-      <a href="minecraft.html"><div class="gridthing">minecraft pk</div></a>
+      <a href="https://thog10million.github.io/oliver-and-ethans-web-design-project/minecraft.html"><div class="gridthing">Minecraft Parkour!!!!!!!!!!</div></a>
       <div class="gridthing">crack cocaine</div>
     </div>
     <h2 style="color:black; font-size: 100px; font-family: Alfa Slab One;">THIS IS THE HOME PACHE!!!!</h2>
