--- a/minecraft.html
+++ b/minecraft.html
@@ -1,8 +1,8 @@
 <body>
   <div id="nav-bar">
-    <div class="gridthing" href="index.html">main</div>
-    <div class="gridthing" href="minecraft.html">minecraft pk</div>
-    <div class="gridthing">crack cocaine</div>
+    <a href="index.html"><div class="gridthing">Main Page</div></a>
+    <a href="https://thog10million.github.io/oliver-and-ethans-web-design-project/minecraft.html"><div class="gridthing">Minecraft Parkour</div></a>
+    <a href="https://en.wikipedia.org/wiki/Crack_cocaine"><div class="gridthing">Crack Cocaine</div></a>
   </div>
   <div id="header">
     <h1>
