--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
   </head>
   <body>
     <div id="nav-bar">
-      <a href="index.html"><div class="gridthing">main</div></a>
-      <a href="https://thog10million.github.io/oliver-and-ethans-web-design-project/minecraft.html"><div class="gridthing">Minecraft Parkour!!!!!!!!!!</div></a>
-      <div class="gridthing">crack cocaine</div>
+      <a href="index.html"><div class="gridthing">Main Page</div></a>
+      <a href="https://thog10million.github.io/oliver-and-ethans-web-design-project/minecraft.html"><div class="gridthing">Minecraft Parkour</div></a>
+      <div class="gridthing">Crack Cocaine</div>
     </div>
-    <h2 style="color:black; font-size: 100px; font-family: Alfa Slab One;">THIS IS THE HOME PACHE!!!!</h2>
+    <h2 style="color:black; font-size: 100px; font-family: Alfa Slab One;">THIS IS THE HOME PAGE!</h2>
     <a href="https://thog10million.github.io/oliver-and-ethans-web-design-project/minecraft.html">click heer</a>
   </body>
   
