--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
       <a href="https://thog10million.github.io/oliver-and-ethans-web-design-project/minecraft.html"><div class="gridthing">Minecraft Parkour</div></a>
       <div class="gridthing">Crack Cocaine</div>
     </div>
-    <h2 style="color:black; font-size: 100px; font-family: Alfa Slab One;">THIS IS THE HOME PAGE!</h2>
-    <a href="https://thog10million.github.io/oliver-and-ethans-web-design-project/minecraft.html">click heer</a>
+    <h1 class="fattext" >THIS IS THE HOME PAGE!</h1>
+    <h2 class="lessfattext">Please check out the cool things we have to offer by clicking on the tabs at the top of the page!</h2>
   </body>
   
   <style>
@@ -30,6 +30,18 @@
     text-align: center;
     padding: 10px 0;
   }
+    
+    .fattext {
+      color: black;
+      font-size: 100px; 
+      font-family: Alfa Slab One;
+    }
+    
+    .lessfattext {
+      color: black;
+      font-size: 75px; 
+      font-family: Alfa Slab One;
+    }
   </style>
 
 </html>
