--- a/minecraft.html
+++ b/minecraft.html
@@ -3,6 +3,7 @@
     <a href="index.html"><div class="gridthing">Main Page</div></a>
     <a href="https://thog10million.github.io/oliver-and-ethans-web-design-project/minecraft.html"><div class="gridthing">Minecraft Parkour</div></a>
     <a href="https://en.wikipedia.org/wiki/Crack_cocaine"><div class="gridthing">Crack Cocaine</div></a>
+    <div class="gridthing">hearts of iron 4 modding</div>
   </div>
   <div id="header">
     <h1>
@@ -16,17 +17,31 @@
   </div>
 </body>
 <style>
+
+  body {
+    background-color: #eb8242;
+    padding:0px;  
+  }
   #nav-bar {
+    position: fixed;
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    margin: 30px;
+    grid-template-columns: repeat(4, 200px);
+    background-color: #f6da63;
+    z-index: 9;
+    width: 100%;
+    height: 50px;
+    top: 0;
+    left: 0;
   }
   
   .gridthing {
-    border: 1px solid #000000;
-    margin: auto 1px;
     text-align: center;
-    padding: 10px 0;
+    padding: 10px 2px;
+    position: relative;
+    top: 5px;
+    left: 5px;
+    color: #9d0b0b;
+    font-weight: Bold;
   }
   
   #main-content {
@@ -34,18 +49,34 @@
     height: 1000px;
     margin: 30px 10px;
     padding: 10px;
+    position: relative;
+    top: 50px;
   }
   
   #header {
+    position: relative;
     border: 1px solid #000000;
     height: 50px;
     margin: 10px 10px;
     text-align: center;
     padding-bottom: 10px;
+    top: 50px;
   } 
   
   h1 {
     line-height: 50%;
+  }
+  
+  a:link {
+  text-decoration: none;
+  }
+
+  a:visited {
+    text-decoration: none;
+  }
+  
+  a:hover {
+    text-decoration: underline #9d0b0b;
   }
   
 </style>
