--- a/index.html
+++ b/index.html
@@ -2,12 +2,14 @@
 <html>
   <head> 
   <link href="https://fonts.googleapis.com/css?family=Alfa+Slab+One&display=swap" rel="stylesheet"> 
+    <title>website!!!!</title>
   </head>
   <body>
     <div id="nav-bar">
       <a href="index.html"><div class="gridthing">Main Page</div></a>
       <a href="https://thog10million.github.io/oliver-and-ethans-web-design-project/minecraft.html"><div class="gridthing">Minecraft Parkour</div></a>
       <div class="gridthing">Crack Cocaine</div>
+      <div class="gridthing">hearts of iron 4 modding</div>
     </div>
     <h1 class="fattext" >THIS IS THE HOME PAGE!</h1>
     <h2 class="lessfattext">Please check out the cool things we have to offer by clicking on the tabs at the top of the page!</h2>
@@ -52,6 +54,18 @@
       font-size: 50px; 
       font-family: Alfa Slab One;
     }
+    
+    a:link {
+  text-decoration: none;
+  }
+
+  a:visited {
+    text-decoration: none;
+  }
+  
+  a:hover {
+    text-decoration: underline #9d0b0b;
+  }
   </style>
 
 </html>
