--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
   </head>
   <body>
     <div id="nav-bar">
-      <a href="index.html"><div class="gridthing">Main Page</div></a>
-      <a href="https://thog10million.github.io/oliver-and-ethans-web-design-project/minecraft.html"><div class="gridthing">Minecraft Parkour</div></a>
-      <div class="gridthing">Crack Cocaine</div>
-      <div class="gridthing">hearts of iron 4 modding</div>
+      <a href="index.html"><div class="gridthing">MAIN PAGE</div></a>
+      <a href="https://thog10million.github.io/oliver-and-ethans-web-design-project/minecraft.html"><div class="gridthing">MINECRAFT PARKOUR</div></a>
+      <div class="gridthing">NOT CRACK COCAINE</div>
+      <div class="gridthing">HOI4 MODDING</div>
     </div>
     <h1 class="fattext" >THIS IS THE HOME PAGE!</h1>
     <h2 class="lessfattext">Please check out the cool things we have to offer by clicking on the tabs at the top of the page!</h2>
@@ -31,6 +31,7 @@
     height: 50px;
     top: 0;
     left: 0;
+    font-family: Alfa Slab One;
   }
   
   .gridthing {
