--- a/minecraft.html
+++ b/minecraft.html
@@ -1,3 +1,4 @@
+<link href="https://fonts.googleapis.com/css?family=Alfa+Slab+One&display=swap" rel="stylesheet"> 
 <body>
   <div id="nav-bar">
     <a href="index.html"><div class="gridthing">Main Page</div></a>
@@ -32,6 +33,7 @@
     height: 50px;
     top: 0;
     left: 0;
+    font-family: Alfa Slab One;
   }
   
   .gridthing {
