--- a/hoi4.html
+++ b/hoi4.html
@@ -11,9 +11,11 @@
       <div class="gridthing">NOT CRACK COCAINE</div>
       <div class="gridthing">HOI4 MODDING</div>
     </div>
+    <div class="offset">
     <h1 class="lessfattext" >HEARTS OF IRON 4 MODDING</h1>
     <h2>Why its cool</h2>
     <p>Hearts of Iron 4 modding is cool because its very easy! And epic</p>
+    </div>
   </body>
   
   <style>
@@ -54,6 +56,11 @@
       color: black;
       font-size: 50px; 
       font-family: Alfa Slab One;
+    }
+    
+    .offset {
+      top: 50px;
+      position: relative;
     }
     
     a:link {
