--- a/minecraft.html
+++ b/minecraft.html
@@ -2,9 +2,9 @@
 <body>
   <div id="nav-bar">
     <a href="index.html"><div class="gridthing">Main Page</div></a>
-    <a href="https://thog10million.github.io/oliver-and-ethans-web-design-project/minecraft.html"><div class="gridthing">Minecraft Parkour</div></a>
+    <a href="minecraft.html"><div class="gridthing">Minecraft Parkour</div></a>
     <a href="https://en.wikipedia.org/wiki/Crack_cocaine"><div class="gridthing">Crack Cocaine</div></a>
-    <div class="gridthing">hearts of iron 4 modding</div>
+    <a href="hoi4.html"><div class="gridthing">hearts of iron 4 modding</div></a>
   </div>
   <div id="header">
     <h1>
