--- a/minecraft.html
+++ b/minecraft.html
@@ -1,10 +1,10 @@
 <link href="https://fonts.googleapis.com/css?family=Alfa+Slab+One&display=swap" rel="stylesheet"> 
 <body>
   <div id="nav-bar">
-    <a href="index.html"><div class="gridthing">Main Page</div></a>
-    <a href="minecraft.html"><div class="gridthing">Minecraft Parkour</div></a>
-    <a href="https://en.wikipedia.org/wiki/Crack_cocaine"><div class="gridthing">Crack Cocaine</div></a>
-    <a href="hoi4.html"><div class="gridthing">hearts of iron 4 modding</div></a>
+    <a href="index.html"><div class="gridthing">MAIN PAGE</div></a>
+    <a href="minecraft.html"><div class="gridthing">MINECRAFT PARKOUR</div></a>
+    <a href="https://en.wikipedia.org/wiki/Crack_cocaine"><div class="gridthing">CRACK COCAINE</div></a>
+    <a href="hoi4.html"><div class="gridthing">HOI4 MODDING</div></a>
   </div>
   <div id="header">
     <h1>
