--- a/minecraft.html
+++ b/minecraft.html
@@ -1,4 +1,9 @@
-<link href="https://fonts.googleapis.com/css?family=Alfa+Slab+One&display=swap" rel="stylesheet"> 
+<head>
+  <title>website!!!!</title>
+  <link href="https://fonts.googleapis.com/css?family=Alfa+Slab+One&display=swap" rel="stylesheet"> 
+</head>
+
+
 <body>
   <div id="nav-bar">
     <a href="index.html"><div class="gridthing">MAIN PAGE</div></a>
