--- a/minecraft.html
+++ b/minecraft.html
@@ -1,6 +1,7 @@
 <head>
   <title>website!!!!</title>
   <link href="https://fonts.googleapis.com/css?family=Alfa+Slab+One&display=swap" rel="stylesheet"> 
+  <link href="https://fonts.googleapis.com/css?family=Lexend+Deca&display=swap" rel="stylesheet"> 
 </head>
 
 
@@ -25,14 +26,28 @@
 <style>
 
   body {
-    background-color: #eb8242;
+    background-color: #801336;
     padding:0px;  
   }
+  
+  p {
+    color: #2d132c;
+    letter-spacing: 0.2px;
+    font-family: 'Lexend Deca', sans-serif;
+    padding-left: 20px;
+  }
+    
+  h1 {
+    color: #2d132c;
+    padding-top: 10px;
+    font-family: 'Lexend Deca', sans-serif;
+  }
+  
   #nav-bar {
     position: fixed;
     display: grid;
     grid-template-columns: repeat(4, 300px);
-    background-color: #f6da63;
+    background-color: #2d132c;
     z-index: 9;
     width: 100%;
     height: 50px;
@@ -47,11 +62,11 @@
     position: relative;
     top: 5px;
     left: 5px;
-    color: #9d0b0b;
+    color: #801336;
   }
   
   #main-content {
-    border: 1px solid #000000;
+    background-color: #c72c41;
     height: 1000px;
     margin: 30px 10px;
     padding: 10px;
@@ -61,17 +76,13 @@
   
   #header {
     position: relative;
-    border: 1px solid #000000;
+    background-color: #c72c41;
     height: 50px;
     margin: 10px 10px;
     text-align: center;
     padding-bottom: 10px;
     top: 50px;
   } 
-  
-  h1 {
-    line-height: 50%;
-  }
   
   a:link {
   text-decoration: none;
