--- a/minecraft.html
+++ b/minecraft.html
@@ -32,8 +32,9 @@
 
   body {
     background-color: #801336;
-    padding: 0px;  
-    min-height: 100vh;
+    padding: 0; 
+    margin: 0;
+    min-height: calc(100vh - 60px);
     position: relative;
   }
   
@@ -54,7 +55,7 @@
   body::after {
      content: ''; 
      display: block;
-     height: 40px; 
+     height: 50px; 
   }
   
   #nav-bar {
@@ -102,7 +103,7 @@
     text-align: center;
     position: absolute; 
     margin: 10px;
-    bottom: -20px;  
+    bottom: -15px;  
     width: calc(100% - 20px);
     height: 50px; 
   }
@@ -114,7 +115,7 @@
   
   a:link {
   text-decoration: none;
-  
+  }
 
   a:visited {
     text-decoration: none;
