--- a/index.html
+++ b/index.html
@@ -26,14 +26,14 @@
   body {
     background-color: #801336;
     color: #da2d2d;
-    min-height: 100vh;
+    min-height: calc(100vh - 60px);
     position: relative;
   }
   
     body::after {
      content: ''; 
      display: block;
-     height: 60px; 
+     height: 50px; 
   }
   
   p {
@@ -88,7 +88,7 @@
     text-align: center;
     position: absolute; 
     margin: 10px;
-    bottom: -20px;  
+    bottom: -15px;  
     width: calc(100% - 20px);
     height: 50px; 
   }
