--- a/minecraft.html
+++ b/minecraft.html
@@ -9,7 +9,7 @@
   <div id="nav-bar">
     <a href="index.html"><div class="gridthing">MAIN PAGE</div></a>
     <a href="minecraft.html"><div class="gridthing">MINECRAFT PARKOUR</div></a>
-    <a href="https://en.wikipedia.org/wiki/Crack_cocaine"><div class="gridthing">CRACK COCAINE</div></a>
+    <a href="https://en.wikipedia.org/wiki/Crack_cocaine"><div class="gridthing">NOT CRACK COCAINE</div></a>
     <a href="hoi4.html"><div class="gridthing">HOI4 MODDING</div></a>
   </div>
   <div id="header">
