--- a/index.html
+++ b/index.html
@@ -38,7 +38,6 @@
   p {
     color: #2d132c;
     font-family: 'Lexend Deca', sans-serif;
-    padding-left: 20px;
     font-size: 24px;
   }
     
@@ -81,6 +80,7 @@
   .lessfattext {
     font-size: 50px; 
     font-family: 'Lexend Deca', sans-serif;
+    margin-bottom: 80px;
   }
     
   #footer {
@@ -88,7 +88,7 @@
     text-align: center;
     position: absolute; 
     margin: 10px;
-    bottom: -15px;  
+    bottom: -23px;  
     width: calc(100% - 20px);
     height: 50px; 
   }
