--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <h1 class="fattext" >THIS IS THE HOME PAGE!</h1>
     <h2 class="lessfattext">Please check out the cool things we have to offer by clicking on the tabs at the top of the page!</h2>
     <div id="footer">
-      <a href="https://twitter.com/nopechef">follow us on tiwtter</a>
+      <a href="https://twitter.com/nopechef"><p>follow us on tiwtter</p></a>
     </div> 
   </body>
   <style>
