--- a/hoi4.html
+++ b/hoi4.html
@@ -18,9 +18,7 @@
     <p class="main-content">Hearts of Iron 4 modding is cool because its very easy! And epic</p>
     </div>
     <div id="footer">
-      <p>
-      follow us on twitter
-      </p>
+      <a href="https://twitter.com/nopechef"><p>follow us on tiwtter</p></a>
     </div> 
   </body>
   <style>
