--- a/minecraft.html
+++ b/minecraft.html
@@ -22,9 +22,7 @@
     </p>
   </div>
   <div id="footer">
-    <p>
-    follow us on twitter
-    </p>
+    <a href="https://twitter.com/nopechef"><p>follow us on tiwtter</p></a>
   </div>
 </body>
 <style>
