Update and rename hoi4.html to contact.html

--- a/contact.html
+++ b/contact.html
@@ -3,19 +3,19 @@
   <head> 
   <link href="https://fonts.googleapis.com/css?family=Alfa+Slab+One&display=swap" rel="stylesheet"> 
   <link href="https://fonts.googleapis.com/css?family=Lexend+Deca&display=swap" rel="stylesheet"> 
-    <title>website!!!!</title>
+    <title>Sugoi Bento - Contact</title>
   </head>
   <body>
     <div id="nav-bar">
       <a href="index.html"><div class="gridthing">MAIN PAGE</div></a>
       <a href="https://thog10million.github.io/oliver-and-ethans-web-design-project/minecraft.html"><div class="gridthing">MINECRAFT PARKOUR</div></a>
       <div class="gridthing">NOT CRACK COCAINE</div>
-      <div class="gridthing">HOI4 MODDING</div>
+      <div class="gridthing">CONTACT</div>
     </div>
     <div class="offset">
-    <h1 class="lessfattext" >HEARTS OF IRON 4 MODDING</h1>
-    <h2>Why its cool</h2>
-    <p class="main-content">Hearts of Iron 4 modding is cool because its very easy! And epic</p>
+    <h1 class="lessfattext" >CONTACT US</h1>
+    <h2>Call us at:</h2>
+    <p class="main-content">1800-your mom sucked my pee pee last night</p>
     </div>
     <div id="footer">
       <a href="https://twitter.com/nopechef"><p>follow us on tiwtter</p></a>
