--- a/contact.html
+++ b/contact.html
@@ -10,7 +10,7 @@
       <a href="index.html"><div class="gridthing">MAIN PAGE</div></a>
       <a href="https://thog10million.github.io/oliver-and-ethans-web-design-project/minecraft.html"><div class="gridthing">MINECRAFT PARKOUR</div></a>
       <div class="gridthing">NOT CRACK COCAINE</div>
-      <div class="gridthing">CONTACT</div>
+      <a href="contact.html"><div class="gridthing">CONTACT</div></a>
     </div>
     <div class="offset">
     <h1 class="lessfattext" >CONTACT US</h1>
