--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head> 
     <link href="https://fonts.googleapis.com/css?family=Alfa+Slab+One&display=swap" rel="stylesheet"> 
     <link href="https://fonts.googleapis.com/css?family=Lexend+Deca&display=swap" rel="stylesheet"> 
-    <title>website!!!!</title>
+    <title>Sugoi Bento</title>
   </head>
   
   <body>
@@ -11,7 +11,7 @@
       <a href="index.html"><div class="gridthing">MAIN PAGE</div></a>
       <a href="https://thog10million.github.io/oliver-and-ethans-web-design-project/minecraft.html"><div class="gridthing">MINECRAFT PARKOUR</div></a>
       <a href="https://en.wikipedia.org/wiki/Crack_cocaine"><div class="gridthing">NOT CRACK COCAINE</div></a>
-      <a href="hoi4.html"><div class="gridthing">HOI4 MODDING</div></a>
+      <a href="contact.html"><div class="gridthing">CONTACT</div></a>
     </div>
     <h1 class="fattext" >THIS IS THE HOME PAGE!</h1>
     <h2 class="lessfattext">Please check out the cool things we have to offer by clicking on the tabs at the top of the page!</h2>
