Update and rename minecraft.html to components.html

--- a/components.html
+++ b/components.html
@@ -1,5 +1,5 @@
 <head>
-  <title>website!!!!</title>
+  <title>Sugoi Bento - Components</title>
   <link href="https://fonts.googleapis.com/css?family=Alfa+Slab+One&display=swap" rel="stylesheet"> 
   <link href="https://fonts.googleapis.com/css?family=Lexend+Deca&display=swap" rel="stylesheet"> 
 </head>
@@ -7,13 +7,13 @@
 <body>
   <div id="nav-bar">
     <a href="index.html"><div class="gridthing">MAIN PAGE</div></a>
-    <a href="minecraft.html"><div class="gridthing">MINECRAFT PARKOUR</div></a>
+    <a href="components.html"><div class="gridthing">COMPONENTS</div></a>
     <a href="https://en.wikipedia.org/wiki/Crack_cocaine"><div class="gridthing">NOT CRACK COCAINE</div></a>
-    <a href="hoi4.html"><div class="gridthing">HOI4 MODDING</div></a>
+    <a href="contact.html"><div class="gridthing">CONTACT</div></a>
   </div>
   <div id="header">
     <h1>
-      minecraft parkour
+      
     </h1>
   </div>
   <div id="main-content">
