--- a/contact.html
+++ b/contact.html
@@ -8,7 +8,7 @@
   <body>
     <div id="nav-bar">
       <a href="index.html"><div class="gridthing">MAIN PAGE</div></a>
-      <a href="https://thog10million.github.io/oliver-and-ethans-web-design-project/minecraft.html"><div class="gridthing">MINECRAFT PARKOUR</div></a>
+      <a href="components.html"><div class="gridthing">BENTO COMPONENTS</div></a>
       <div class="gridthing">NOT CRACK COCAINE</div>
       <a href="contact.html"><div class="gridthing">CONTACT</div></a>
     </div>
