--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
     <div id="nav-bar">
       <a href="index.html"><div class="gridthing">MAIN PAGE</div></a>
-      <a href="https://thog10million.github.io/oliver-and-ethans-web-design-project/minecraft.html"><div class="gridthing">MINECRAFT PARKOUR</div></a>
+      <a href="components.html"><div class="gridthing">BENTO COMPONENTS</div></a>
       <a href="https://en.wikipedia.org/wiki/Crack_cocaine"><div class="gridthing">NOT CRACK COCAINE</div></a>
       <a href="contact.html"><div class="gridthing">CONTACT</div></a>
     </div>
