--- a/components.html
+++ b/components.html
@@ -7,7 +7,7 @@
 <body>
   <div id="nav-bar">
     <a href="index.html"><div class="gridthing">MAIN PAGE</div></a>
-    <a href="components.html"><div class="gridthing">COMPONENTS</div></a>
+    <a href="components.html"><div class="gridthing">BENTO COMPONENTS</div></a>
     <a href="https://en.wikipedia.org/wiki/Crack_cocaine"><div class="gridthing">NOT CRACK COCAINE</div></a>
     <a href="contact.html"><div class="gridthing">CONTACT</div></a>
   </div>
