--- a/components.html
+++ b/components.html
@@ -13,7 +13,7 @@
   </div>
   <div id="header">
     <h1>
-      
+      COMPoneents
     </h1>
   </div>
   <div id="main-content">
@@ -62,6 +62,7 @@
     top: 0;
     left: 0;
     font-family: Alfa Slab One;
+    color: #c72c41;
   }
   
   .gridthing {
