--- a/contact.html
+++ b/contact.html
@@ -31,6 +31,12 @@
     font-family: 'Lexend Deca', sans-serif;
   }
   
+  p {
+    color: #2d132c;
+    font-family: 'Lexend Deca', sans-serif;
+    font-size: 24px;
+  }  
+    
   body::after {
     content: ''; 
     display: block;
