--- a/contact.html
+++ b/contact.html
@@ -9,7 +9,7 @@
     <div id="nav-bar">
       <a href="index.html"><div class="gridthing">MAIN PAGE</div></a>
       <a href="shop.html"><div class="gridthing">SHOP</div></a>
-      <div class="gridthing">NOT CRACK COCAINE</div>
+      <a href="about.html"><div class="gridthing">ABOUT</div></a>
       <a href="contact.html"><div class="gridthing">CONTACT</div></a>
     </div>
     <div class="offset">
