--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,7 @@
   <head> 
   <link href="https://fonts.googleapis.com/css?family=Alfa+Slab+One&display=swap" rel="stylesheet"> 
   <link href="https://fonts.googleapis.com/css?family=Lexend+Deca&display=swap" rel="stylesheet"> 
-    <title>Sugoi Bento - Contact</title>
+    <title>UPSILAMBA - Contact</title>
   </head>
   <body>
     <div id="nav-bar">
