--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
     <div id="nav-bar">
       <a href="index.html"><div class="gridthing">MAIN PAGE</div></a>
       <a href="shop.html"><div class="gridthing">SHOP</div></a>
-      <a href="https://en.wikipedia.org/wiki/Crack_cocaine"><div class="gridthing">NOT CRACK COCAINE</div></a>
+      <a href="about.html"><div class="gridthing">ABOUT</div></a>
       <a href="contact.html"><div class="gridthing">CONTACT</div></a>
     </div>
-    <h1 class="fattext" >THIS IS THE HOME PAGE!</h1>
+    <h1 class="fattext" >UPSILAMBA</h1>
     <h2 class="lessfattext">Please check out the cool things we have to offer by clicking on the tabs at the top of the page!</h2>
     <div id="footer">
       <a href="https://twitter.com/nopechef"><p>follow us on tiwtter</p></a>
@@ -74,6 +74,7 @@
   .fattext {
     font-size: 100px; 
     font-family: 'Lexend Deca', sans-serif;
+    text-align: center;
   }
     
   .lessfattext {
