--- a/shop.html
+++ b/shop.html
@@ -1,5 +1,5 @@
 <head>
-  <title>Sugoi Bento - Components</title>
+  <title>UPSILAMBA - Components</title>
   <link href="https://fonts.googleapis.com/css?family=Alfa+Slab+One&display=swap" rel="stylesheet"> 
   <link href="https://fonts.googleapis.com/css?family=Lexend+Deca&display=swap" rel="stylesheet"> 
 </head>
@@ -8,13 +8,11 @@
   <div id="nav-bar">
     <a href="index.html"><div class="gridthing">MAIN PAGE</div></a>
     <a href="shop.html"><div class="gridthing">SHOP</div></a>
-    <a href="https://en.wikipedia.org/wiki/Crack_cocaine"><div class="gridthing">NOT CRACK COCAINE</div></a>
+    <a href="about.html"><div class="gridthing">ABOUT</div></a>
     <a href="contact.html"><div class="gridthing">CONTACT</div></a>
   </div>
   <div id="header">
-    <h1>
-      COMPoneents
-    </h1>
+    <h1>SHOP UPSILAMBA</h1>
   </div>
   <div id="main-content">
     <p>
