--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
   <head> 
     <link href="https://fonts.googleapis.com/css?family=Alfa+Slab+One&display=swap" rel="stylesheet"> 
     <link href="https://fonts.googleapis.com/css?family=Lexend+Deca&display=swap" rel="stylesheet"> 
-    <title>Upsilamba - About</title>
+    <title>UPSILAMBA - About</title>
   </head>
   
   <body>
@@ -14,7 +14,7 @@
       <a href="contact.html"><div class="gridthing">CONTACT</div></a>
     </div>
     <h1 class="fattext" >ABOUT UPSILAMBA</h1>
-    <h2 class="lessfattext">Please check out the cool things we have to offer by clicking on the tabs at the top of the page!</h2>
+    <h2 class="lessfattext">Our goal is to sell shirts.</h2>
     <div id="footer">
       <a href="https://twitter.com/nopechef"><p>follow us on tiwtter</p></a>
     </div> 
