--- a/shop.html
+++ b/shop.html
@@ -1,5 +1,5 @@
 <head>
-  <title>UPSILAMBA - Components</title>
+  <title>UPSILAMBA - Shop</title>
   <link href="https://fonts.googleapis.com/css?family=Alfa+Slab+One&display=swap" rel="stylesheet"> 
   <link href="https://fonts.googleapis.com/css?family=Lexend+Deca&display=swap" rel="stylesheet"> 
 </head>
