--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head> 
     <link href="https://fonts.googleapis.com/css?family=Alfa+Slab+One&display=swap" rel="stylesheet"> 
     <link href="https://fonts.googleapis.com/css?family=Lexend+Deca&display=swap" rel="stylesheet"> 
-    <title>Sugoi Bento</title>
+    <title>UPSILAMBA</title>
   </head>
   
   <body>
