--- a/shop.html
+++ b/shop.html
@@ -1,7 +1,7 @@
 <head>
   <title>UPSILAMBA - Shop</title>
-  <link href="https://fonts.googleapis.com/css?family=Alfa+Slab+One&display=swap" rel="stylesheet"> 
-  <link href="https://fonts.googleapis.com/css?family=Lexend+Deca&display=swap" rel="stylesheet"> 
+  <link href="https://fonts.googleapis.com/css?family=Alfa+Slab+One&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Lexend+Deca&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -12,7 +12,7 @@
     <a href="contact.html"><div class="gridthing">CONTACT</div></a>
   </div>
   <div id="header">
-    <h1>SHOP UPSILAMBA</h1>
+    <h1 class="fattext">SHOP UPSILAMBA</h1>
   </div>
   <div id="main-content">
     <p>
@@ -30,25 +30,25 @@
     min-height: calc(100vh - 60px);
     position: relative;
   }
-  
+
   p {
     color: #2d132c;
     font-family: 'Lexend Deca', sans-serif;
     font-size: 24px;
   }
-    
+
   h1 {
     color: #2d132c;
     font-family: 'Lexend Deca', sans-serif;
     font-size: 40px;
   }
-  
+
   body::after {
-     content: ''; 
+     content: '';
      display: block;
-     height: 50px; 
+     height: 50px;
   }
-  
+
   #nav-bar {
     position: fixed;
     display: grid;
@@ -62,7 +62,7 @@
     font-family: Alfa Slab One;
     color: #c72c41;
   }
-  
+
   .gridthing {
     text-align: center;
     padding: 10px 2px;
@@ -71,7 +71,7 @@
     left: 5px;
     color: #c72c41;
   }
-  
+
   #header {
     position: relative;
     background-color: #c72c41;
@@ -80,8 +80,8 @@
     text-align: center;
     padding-bottom: 10px;
     top: 50px;
-  } 
-  
+  }
+
   #main-content {
     background-color: #c72c41;
     margin: 30px 10px 80px;
@@ -89,23 +89,23 @@
     position: relative;
     top: 50px;
   }
-  
+
   #footer {
     background-color: #c72c41;
     text-align: center;
-    position: absolute; 
+    position: absolute;
     margin: 10px;
-    bottom: -15px; 
+    bottom: -15px;
     width: calc(100% - 20px);
-    height: 50px; 
+    height: 50px;
   }
-  
+
   #footer p {
     position: relative;
     bottom: 15px;
     padding: none;
   }
-  
+
   a:link {
   text-decoration: none;
   }
@@ -113,9 +113,9 @@
   a:visited {
     text-decoration: none;
   }
-  
+
   a:hover {
     text-decoration: underline #801336;
   }
-  
+
 </style>
