--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <a href="contact.html"><div class="gridthing">CONTACT</div></a>
     </div>
     <h1 class="fattext" >UPSILAMBA</h1>
-    <h2 class="lessfattext">/upsiːɫɑːmbɐ/</h2>
+    <h2 class="lessfattext">/upsiːɫ'ɑːmbɐ/</h2>
     <p id="definition">1. happiness and excitement</p>
     <div id="footer">
       <a href="https://twitter.com/nopechef"><p>follow us on tiwtter</p></a>
