--- a/index.html
+++ b/index.html
@@ -83,6 +83,7 @@
     font-size: 50px;
     font-family: 'Lexend Deca', sans-serif;
     margin-bottom: 80px;
+    text-align: center;
   }
 
   #footer {
@@ -117,6 +118,7 @@
       font-family: "Tangerine";
       font-size: 75px;
       text-align: center;
+      background-color: #c72c41;
   }
   </style>
 
