--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
       <a href="contact.html"><div class="gridthing">CONTACT</div></a>
     </div>
     <h1 class="fattext" >UPSILAMBA</h1>
-    <h2 class="lessfattext">/upsiːɫ'ɑːmbɐ/</h2>
+    <div class="ipatext">
+      <h2 class="lessfattext">/upsiːɫ'ɑːmbɐ/</h2>
+    </div>
     <p id="definition">1. happiness and excitement</p>
     <div id="footer">
       <a href="https://twitter.com/nopechef"><p>follow us on tiwtter</p></a>
@@ -119,6 +121,10 @@
       font-size: 75px;
       text-align: center;
       background-color: #c72c41;
+  }
+
+  #ipatext {
+    width: 500px
   }
   </style>
 
