--- a/index.html
+++ b/index.html
@@ -117,14 +117,17 @@
   }
 
   #definition {
-      font-family: "Tangerine";
-      font-size: 75px;
-      text-align: center;
-      background-color: #c72c41;
+    font-family: "Tangerine";
+    font-size: 75px;
+    text-align: center;
+    background-color: #c72c41;
+    margin: 10px;
+    padding: 10px 0;
   }
 
   div.ipatext {
     width: 500px;
+    margin: auto;
     text-align: center;
   }
 
