--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
     font-size: 75px;
     text-align: center;
     background-color: #c72c41;
-    margin: 10px;
+    margin: auto;
     padding: 10px 0;
     width: 550px;
   }
