--- a/index.html
+++ b/index.html
@@ -39,9 +39,11 @@
   }
 
   p {
-    color: #2d132c;
+    color: #ffffff;
     font-family: 'Lexend Deca', sans-serif;
     font-size: 24px;
+    text-align: center;
+    margin: 10px auto;
   }
 
   h1, h2 {
