--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <div class="ipatext">
       <h2 class="lessfattext">/upsiːɫ'ɑːmbɐ/</h2>
     </div>
-    <p id="definition">1. happiness and excitement</p>
+    <h2 id="definition">1. happiness and excitement</h2>
     <p>UPSILAMBA is more than just a clothing brand. It is a message, a movement, and a money laundering buisness. Please buy our products to fund our criminal enterprise!</p>
     <div id="footer">
       <a href="https://twitter.com/nopechef"><p>follow us on tiwtter</p></a>
