--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
     font-size: 24px;
     text-align: center;
     margin: 10px auto;
+    margin-top: 80px;
   }
 
   h1, h2 {
@@ -87,7 +88,6 @@
   .lessfattext {
     font-size: 50px;
     font-family: 'Lexend Deca', sans-serif;
-    margin-bottom: 80px;
     text-align: center;
   }
 
