--- a/shop.html
+++ b/shop.html
@@ -36,10 +36,13 @@
     font-size: 24px;
   }
 
-  h1 {
+  h1, h2 {
+    position: relative;
+    top: 50px;
+    margin: 20px 10px;
+    padding: 20px;
     color: #2d132c;
-    font-family: 'Lexend Deca', sans-serif;
-    font-size: 40px;
+    background-color: #c72c41;
   }
 
   body::after {
@@ -69,6 +72,18 @@
     top: 5px;
     left: 5px;
     color: #c72c41;
+  }
+  
+   .fattext {
+    font-size: 100px;
+    font-family: 'Lexend Deca', sans-serif;
+    text-align: center;
+  }
+  
+  .lessfattext {
+    font-size: 50px;
+    font-family: 'Lexend Deca', sans-serif;
+    text-align: center;
   }
 
   #header {
