--- a/shop.html
+++ b/shop.html
@@ -17,6 +17,14 @@
     minecraft parkour is a thing where you jump in minecraft and you try to not fall off of the blocks
     </p>
   </div>
+  <div class="grid-container">
+    <div class="grid-item">1</div>
+    <div class="grid-item">2</div>
+    <div class="grid-item">3</div>
+    <div class="grid-item">4</div>
+    <div class="grid-item">5</div>
+    <div class="grid-item">6</div>
+  </div>
   <div id="footer">
     <a href="https://twitter.com/nopechef"><p>follow us on tiwtter</p></a>
   </div>
@@ -65,6 +73,19 @@
     color: #c72c41;
   }
 
+  .grid-container {
+    display: grid;
+    grid-template-columns: auto auto auto;
+    padding: 10px;
+  }
+
+  .grid-item {
+    border: 1px solid rgba(0, 0, 0, 0.8);
+    padding: 20px;
+    font-size: 30px;
+    text-align: center;
+  }
+
   .gridthing {
     text-align: center;
     padding: 10px 2px;
@@ -73,13 +94,13 @@
     left: 5px;
     color: #c72c41;
   }
-  
+
    .fattext {
     font-size: 100px;
     font-family: 'Lexend Deca', sans-serif;
     text-align: center;
   }
-  
+
   .lessfattext {
     font-size: 50px;
     font-family: 'Lexend Deca', sans-serif;
