--- a/shop.html
+++ b/shop.html
@@ -76,6 +76,7 @@
   .grid-container {
     display: grid;
     grid-template-columns: auto auto auto;
+    margin: 0 50px;
     padding: 10px;
   }
 
