--- a/shop.html
+++ b/shop.html
@@ -14,7 +14,7 @@
   <h1 class="fattext">SHOP UPSILAMBA</h1>
   <div id="main-content">
     <p>
-    minecraft parkour is a thing where you jump in minecraft and you try to not fall off of the blocks
+    All of our products are made with 100% stuff.
     </p>
   </div>
   <div class="grid-container">
