--- a/shop.html
+++ b/shop.html
@@ -18,12 +18,12 @@
     </p>
   </div>
   <div class="grid-container">
-    <div class="grid-item">1</div>
-    <div class="grid-item">2</div>
-    <div class="grid-item">3</div>
-    <div class="grid-item">4</div>
-    <div class="grid-item">5</div>
-    <div class="grid-item">6</div>
+    <img src="" class="grid-item">idiot shirt</img>
+    <img src="" class="grid-item">please buy this shirt</img>
+    <img src="" class="grid-item">i paid money for this shirt</img>
+    <img src="" class="grid-item">i scream but no one can hear shirt</img>
+    <img src="" class="grid-item">BUY THIS NOW!!!!!!!!! shirt</img>
+    <img src="" class="grid-item">frog in space</img>
   </div>
   <div id="footer">
     <a href="https://twitter.com/nopechef"><p>follow us on tiwtter</p></a>
@@ -76,12 +76,13 @@
   .grid-container {
     display: grid;
     grid-template-columns: auto auto auto;
-    margin: 0 50px;
+    margin: 0 200px;
     padding: 10px;
   }
 
   .grid-item {
     border: 1px solid rgba(0, 0, 0, 0.8);
+    height: 500px;
     padding: 20px;
     font-size: 30px;
     text-align: center;
