--- a/shop.html
+++ b/shop.html
@@ -75,7 +75,7 @@
 
   .grid-container {
     display: grid;
-    grid-template-columns: auto auto auto;
+    grid-template-columns: 1fr 1fr 1fr;
     margin: 0 200px;
     padding: 10px;
   }
