--- a/shop.html
+++ b/shop.html
@@ -18,12 +18,12 @@
     </p>
   </div>
   <div class="grid-container">
-    <img src="" class="grid-item">idiot shirt</img>
-    <img src="" class="grid-item">please buy this shirt</img>
-    <img src="" class="grid-item">i paid money for this shirt</img>
-    <img src="" class="grid-item">i scream but no one can hear shirt</img>
-    <img src="" class="grid-item">BUY THIS NOW!!!!!!!!! shirt</img>
-    <img src="" class="grid-item">frog in space</img>
+    <img src="" class="grid-item"><p>idiot shirt</p>
+    <img src="" class="grid-item"><p>please buy this shirt</p>
+    <img src="" class="grid-item"><p>i paid money for this shirt</p>
+    <img src="" class="grid-item"><p>i scream but no one can hear shirt</p>
+    <img src="" class="grid-item"><p>BUY THIS NOW!!!!!!!!! shirt</p>
+    <img src="" class="grid-item"><p>frog in space</p>
   </div>
   <div id="footer">
     <a href="https://twitter.com/nopechef"><p>follow us on tiwtter</p></a>
