--- a/shop.html
+++ b/shop.html
@@ -18,12 +18,12 @@
     </p>
   </div>
   <div class="grid-container">
-    <img src="" class="grid-item"><p>idiot shirt</p>
-    <img src="" class="grid-item"><p>please buy this shirt</p>
-    <img src="" class="grid-item"><p>i paid money for this shirt</p>
-    <img src="" class="grid-item"><p>i scream but no one can hear shirt</p>
-    <img src="" class="grid-item"><p>BUY THIS NOW!!!!!!!!! shirt</p>
-    <img src="" class="grid-item"><p>frog in space</p>
+    <img src="" class="grid-item"><p style="color: #c72c41;">idiot Shirt</p>
+    <img src="" class="grid-item"><p style="color: #c72c41;">please buy this Shirt</p>
+    <img src="" class="grid-item"><p style="color: #c72c41;">i paid money for this Shirt</p>
+    <img src="" class="grid-item"><p style="color: #c72c41;">i scream but no one can hear Shirt</p>
+    <img src="" class="grid-item"><p style="color: #c72c41;">BUY THIS NOW!!!!!!!!! Shirt</p>
+    <img src="" class="grid-item"><p style="color: #c72c41;">frog in space Shirt</p>
   </div>
   <div id="footer">
     <a href="https://twitter.com/nopechef"><p>follow us on tiwtter</p></a>
