--- a/shop.html
+++ b/shop.html
@@ -18,12 +18,12 @@
     </p>
   </div>
   <div class="grid-container">
-    <img src="" class="grid-item"><p style="color: #c72c41;">idiot Shirt</p>
-    <img src="" class="grid-item"><p style="color: #c72c41;">please buy this Shirt</p>
-    <img src="" class="grid-item"><p style="color: #c72c41;">i paid money for this Shirt</p>
-    <img src="" class="grid-item"><p style="color: #c72c41;">i scream but no one can hear Shirt</p>
-    <img src="" class="grid-item"><p style="color: #c72c41;">BUY THIS NOW!!!!!!!!! Shirt</p>
-    <img src="" class="grid-item"><p style="color: #c72c41;">frog in space Shirt</p>
+    <img src="" class="grid-item"><p class="shop-item-title">idiot Shirt</p>
+    <img src="" class="grid-item"><p class="shop-item-title">please buy this Shirt</p>
+    <img src="" class="grid-item"><p class="shop-item-title">i paid money for this Shirt</p>
+    <img src="" class="grid-item"><p class="shop-item-title">i scream but no one can hear Shirt</p>
+    <img src="" class="grid-item"><p class="shop-item-title">BUY THIS NOW!!!!!!!!! Shirt</p>
+    <img src="" class="grid-item"><p class="shop-item-title">frog in space Shirt</p>
   </div>
   <div id="footer">
     <a href="https://twitter.com/nopechef"><p>follow us on tiwtter</p></a>
@@ -153,5 +153,13 @@
   a:hover {
     text-decoration: underline #801336;
   }
+
+  .shop-item-title {
+    color: #2d132c;
+    background-color: #c72c41;
+    font-family: 'Lexend Deca', sans-serif;
+    font-size: 24px;
+  }
+
 
 </style>
