--- a/shop.html
+++ b/shop.html
@@ -159,6 +159,7 @@
     background-color: #c72c41;
     font-family: 'Lexend Deca', sans-serif;
     font-size: 24px;
+    text-align: center;
   }
 
 
