--- a/shop.html
+++ b/shop.html
@@ -18,12 +18,12 @@
     </p>
   </div>
   <div class="grid-container">
-    <img src="" class="grid-item"><p class="shop-item-title">idiot Shirt</p>
-    <img src="" class="grid-item"><p class="shop-item-title">please buy this Shirt</p>
-    <img src="" class="grid-item"><p class="shop-item-title">i paid money for this Shirt</p>
-    <img src="" class="grid-item"><p class="shop-item-title">i scream but no one can hear Shirt</p>
-    <img src="" class="grid-item"><p class="shop-item-title">BUY THIS NOW!!!!!!!!! Shirt</p>
-    <img src="" class="grid-item"><p class="shop-item-title">frog in space Shirt</p>
+    <img src="Idiot.jpg" class="grid-item"><p class="shop-item-title">idiot Shirt</p>
+    <img src="Please buy this.png" class="grid-item"><p class="shop-item-title">please buy this Shirt</p>
+    <img src="I paid money for this.png" class="grid-item"><p class="shop-item-title">i paid money for this Shirt</p>
+    <img src="I scream.png" class="grid-item"><p class="shop-item-title">i scream but no one can hear Shirt</p>
+    <img src="Buy this now.png" class="grid-item"><p class="shop-item-title">BUY THIS NOW!!!!!!!!! Shirt</p>
+    <img src="Frog in space.png" class="grid-item"><p class="shop-item-title">frog in space Shirt</p>
   </div>
   <div id="footer">
     <a href="https://twitter.com/nopechef"><p>follow us on tiwtter</p></a>
