--- a/shop.html
+++ b/shop.html
@@ -84,7 +84,7 @@
     border: 1px solid rgba(0, 0, 0, 0.8);
     padding: 20px;
     font-size: 30px;
-    text-align: center;
+    content-align: center;
     width: 300px;
   }
 
