--- a/shop.html
+++ b/shop.html
@@ -18,12 +18,18 @@
     </p>
   </div>
   <div class="grid-container">
-    <img src="images\Idiot.jpg" class="grid-item"><p class="shop-item-title">idiot Shirt</p>
-    <img src="images\Please buy this.png" class="grid-item"><p class="shop-item-title">please buy this Shirt</p>
-    <img src="images\I paid money for this.png" class="grid-item"><p class="shop-item-title">i paid money for this Shirt</p>
-    <img src="images\I scream.png" class="grid-item"><p class="shop-item-title">i scream but no one can hear Shirt</p>
-    <img src="images\Buy this now.png" class="grid-item"><p class="shop-item-title">BUY THIS NOW!!!!!!!!! Shirt</p>
-    <img src="images\Frog in space.png" class="grid-item"><p class="shop-item-title">frog in space Shirt</p>
+    <img src="images\Idiot.jpg" class="grid-item">
+    <img src="images\Please buy this.png" class="grid-item">
+    <img src="images\I paid money for this.png" class="grid-item">
+    <p class="shop-item-title">please buy this Shirt</p>
+    <p class="shop-item-title">idiot Shirt</p>
+    <p class="shop-item-title">i paid money for this Shirt</p>
+    <img src="images\I scream.png" class="grid-item">
+    <img src="images\Buy this now.png" class="grid-item">
+    <img src="images\Frog in space.png" class="grid-item">
+    <p class="shop-item-title">i scream but no one can hear Shirt</p>
+    <p class="shop-item-title">BUY THIS NOW!!!!!!!!! Shirt</p>
+    <p class="shop-item-title">frog in space Shirt</p>
   </div>
   <div id="footer">
     <a href="https://twitter.com/nopechef"><p>follow us on tiwtter</p></a>
@@ -81,10 +87,11 @@
 
   .grid-item {
     border: 1px solid rgba(0, 0, 0, 0.8);
-    padding: 20px;
+    left: 60px;
     font-size: 30px;
     content-align: center;
     width: 300px;
+    position:relative;
   }
 
   .gridthing {
@@ -160,6 +167,7 @@
     font-family: 'Lexend Deca', sans-serif;
     font-size: 24px;
     text-align: center;
+    width: calc(100% - 60px)
   }
 
 
