--- a/shop.html
+++ b/shop.html
@@ -18,7 +18,7 @@
     </p>
   </div>
   <div class="grid-container">
-    <img src="images\Idiot.jpg" class="grid-item">
+    <img src="images\Idiot.png" class="grid-item">
     <img src="images\Please buy this.png" class="grid-item">
     <img src="images\I paid money for this.png" class="grid-item">
     <p class="shop-item-title">please buy this Shirt</p>
