--- a/shop.html
+++ b/shop.html
@@ -21,8 +21,8 @@
     <img src="images\Idiot.png" class="grid-item">
     <img src="images\Please buy this.png" class="grid-item">
     <img src="images\I paid money for this.png" class="grid-item">
-    <p class="shop-item-title">please buy this Shirt</p>
     <p class="shop-item-title">idiot Shirt</p>
+    <p class="shop-item-title">please buy this Shirt</p>
     <p class="shop-item-title">i paid money for this Shirt</p>
     <img src="images\I scream.png" class="grid-item">
     <img src="images\Buy this now.png" class="grid-item">
@@ -146,6 +146,7 @@
     position: relative;
     bottom: 15px;
     padding: none;
+    border-radius: 25px 25px;
   }
 
   a:link {
