--- a/shop.html
+++ b/shop.html
@@ -168,6 +168,11 @@
     font-size: 24px;
     text-align: center;
     width: calc(100% - 60px)
+    background:
+		  linear-gradient(135deg, transparent 10px, #c00 0) top left,
+		  linear-gradient(225deg, transparent 10px, #c00 0) top right,
+		  linear-gradient(315deg, transparent 10px, #c00 0) bottom right,
+		  linear-gradient(45deg,  transparent 10px, #c00 0) bottom left;
   }
 
 
