--- a/shop.html
+++ b/shop.html
@@ -168,11 +168,19 @@
     font-size: 24px;
     text-align: center;
     width: calc(100% - 60px)
-    background:
-		  linear-gradient(135deg, transparent) top left,
-		  linear-gradient(225deg, transparent) top right,
-		  linear-gradient(315deg, transparent) bottom right,
-		  linear-gradient(45deg,  transparent) bottom left;
+    background-image: linear-gradient(180deg, #ffdc00, #ffdc00),
+      linear-gradient(225deg, #ffdc00, #ffdc00),
+      linear-gradient(0deg, #ffdc00, #ffdc00),
+      linear-gradient(90deg, #ffdc00, #ffdc00),
+      linear-gradient(135deg, transparent 9px, #ffdc00 10px, #ffdc00 12px, transparent 12px);
+  background-position: top right,top right,bottom left,bottom left,top left;
+  background-size: calc(100% - 15px) 2px
+    ,2px 100%
+    ,100% 2px
+    ,2px calc(100% - 15px)
+    ,15px 15px
+    ;
+  background-repeat: no-repeat;
   }
 
 
