--- a/about.html
+++ b/about.html
@@ -4,6 +4,7 @@
     <link href="https://fonts.googleapis.com/css?family=Alfa+Slab+One&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Lexend+Deca&display=swap" rel="stylesheet">
     <title>UPSILAMBA - About</title>
+    <link rel="shortcut icon" href="images/icon.png">
   </head>
 
   <body>
