--- a/contact.html
+++ b/contact.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html>
   <head>
-  <link href="https://fonts.googleapis.com/css?family=Alfa+Slab+One&display=swap" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css?family=Lexend+Deca&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Alfa+Slab+One&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Lexend+Deca&display=swap" rel="stylesheet">
     <title>UPSILAMBA - Contact</title>
+    <link rel="shortcut icon" href="images/icon.png">
   </head>
   <body>
     <div id="nav-bar">
