--- a/shop.html
+++ b/shop.html
@@ -2,6 +2,7 @@
   <title>UPSILAMBA - Shop</title>
   <link href="https://fonts.googleapis.com/css?family=Alfa+Slab+One&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Lexend+Deca&display=swap" rel="stylesheet">
+  <link rel="shortcut icon" href="images/icon.png">
 </head>
 
 <body>
