--- a/shop.html
+++ b/shop.html
@@ -135,6 +135,7 @@
 
   #footer {
     background-color: #c72c41;
+    color: #2d132c;
     text-align: center;
     position: absolute;
     margin: 10px;
