--- a/shop.html
+++ b/shop.html
@@ -169,7 +169,14 @@
     font-family: 'Lexend Deca', sans-serif;
     font-size: 24px;
     text-align: center;
-    width: calc(100% - 60px)
+    width: calc(100% - 60px);
+    background:
+		  linear-gradient(135deg, transparent 10px, #c72c41 0) top left,
+		  linear-gradient(225deg, transparent 0px, #c72c41 0) top right,
+      linear-gradient(315deg, transparent 10px, #c72c41 0) bottom right,
+	  	linear-gradient(45deg,  transparent 0px, #c72c41 0) bottom left;
+  	background-size: 50% 50%;
+  	background-repeat: no-repeat;
   }
 
 
