fixed oliver dumb stupid ass mistake cringe

--- a/shop.html
+++ b/shop.html
@@ -19,7 +19,7 @@
     </p>
   </div>
   <div class="grid-container">
-    <a href="idiot-shirt.html"><img src="images\Idiot.png" class="grid-item">
+    <a href="idiot-shirt.html"><img src="images\Idiot.png" class="grid-item"></a>
     <img src="images\Please buy this.png" class="grid-item">
     <img src="images\I paid money for this.png" class="grid-item">
     <a href="idiot-shirt.html"><p class="shop-item-title">idiot Shirt</p>
