--- a/idiot-shirt.html
+++ b/idiot-shirt.html
@@ -16,8 +16,6 @@
     </div>
     <h1 class="lessfattext" >idiot Shirt</h1>
     <img src="images\Idiot.png" align="left" class="product-image">
-    <p id="definition">1. happiness and excitement</p>
-    <p>UPSILAMBA is more than just a clothing brand. It is a message, a movement, and a money laundering buisness. Please buy our products to fund our criminal enterprise!</p>
     <div id="footer">
       <a href="https://twitter.com/nopechef"><p>follow us on tiwtter</p></a>
     </div>
@@ -81,6 +79,7 @@
     font-size: 50px;
     font-family: 'Lexend Deca', sans-serif;
     text-align: center;
+    margin-bottom: 100px;
   }
   #footer {
     background-color: #c72c41;
@@ -121,6 +120,7 @@
   
   img.product-image {
     height: 600px;
+    padding-left: 100px;
   }
   
   </style>
