--- a/shop.html
+++ b/shop.html
@@ -19,10 +19,10 @@
     </p>
   </div>
   <div class="grid-container">
-    <a href="idiot-shirt.html"><img src="images\Idiot.png" class="grid-item"></a>
+    <a href="shirtpages\idiot-shirt.html"><img src="images\Idiot.png" class="grid-item"></a>
     <img src="images\Please buy this.png" class="grid-item">
     <img src="images\I paid money for this.png" class="grid-item">
-    <a href="idiot-shirt.html"><p class="shop-item-title">idiot Shirt</p></a>
+    <a href="shirtpages\idiot-shirt.html"><p class="shop-item-title">idiot Shirt</p></a>
     <p class="shop-item-title">please buy this Shirt</p>
     <p class="shop-item-title">i paid money for this Shirt</p>
     <img src="images\I scream.png" class="grid-item">
