--- a/idiot-shirt.html
+++ b/idiot-shirt.html
@@ -5,6 +5,7 @@
     <link href="https://fonts.googleapis.com/css?family=Lexend+Deca&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Tangerine&display=swap" rel="stylesheet">
     <title>UPSILAMBA - idiot Shirt</title>
+    <link rel="shortcut icon" href="images/icon.png">
   </head>
 
   <body>
