--- a/idiot-shirt.html
+++ b/idiot-shirt.html
@@ -18,26 +18,12 @@
     <h1 class="lessfattext" >idiot Shirt</h1>
     <img src="images\Idiot.png" align="left" class="product-image">
     <p>This shirt was inspired by my friend ethan.</p><br>
-    <p>Although the cause of death was reported as accident - fall from height, Richard, a 88-year-old former CEO, is convinced that his ex-boyfriend, Maximillian Rose, was murdered.
-
-He is an Argentinian Hindu who defines himself as pansexual. He has a post-graduate degree in business studies.
-
-Physically, Richard is in pretty good shape. He is average-height with bronze skin, blonde hair and green eyes.
-
-He grew up in an upper class neighbourhood. His father left when he was young, leaving him with his mother, who was an addict.
-
-He is currently in a relationship with Samuel Jessie Price. Samuel is the same age as him and works as a plumber.
-
-Richard has one child with boyfriend Samuel: Joann aged 40.
-
-Richard's best friend is a former CEO called Virgil Davis. They get on well most of the time. He also hangs around with a former CEO called Ellis Howard. They enjoy looking for clues together.
-</p>
+    <p>COST:</p><h1>$79</h1>
     
     <div id="footer">
       <a href="https://twitter.com/nopechef"><p>follow us on tiwtter</p></a>
     </div>
   </body>
-  
   
   <style>
   body {
