--- a/idiot-shirt.html
+++ b/idiot-shirt.html
@@ -18,7 +18,8 @@
     <h1 class="lessfattext" >idiot Shirt</h1>
     <img src="images\Idiot.png" align="left" class="product-image">
     <p>This shirt was inspired by my friend ethan.</p><br>
-    <p>COST:</p><h1>$79</h1>
+    <p>COST:</p>
+    <p class="cost">$79</p>
     
     <div id="footer">
       <a href="https://twitter.com/nopechef"><p>follow us on tiwtter</p></a>
@@ -124,6 +125,10 @@
   img.product-image {
     height: 600px;
     padding-left: 100px;
+  }
+    
+  .cost {
+    font-size: 36px;
   }
   
   </style>
