--- a/contact.html
+++ b/contact.html
@@ -81,6 +81,7 @@
   .fattext {
     font-size: 100px;
     font-family: 'Lexend Deca', sans-serif;
+    text-align: center;
   }
 
   .lessfattext {
@@ -89,7 +90,6 @@
   }
 
   .offset {
-    top: 50px;
     position: relative;
   }
 
