--- a/contact.html
+++ b/contact.html
@@ -24,37 +24,32 @@
   </body>
   <style>
 
-  body {
+body {
     background-color: #801336;
-    min-height: calc(100vh - 60px);
+    min-height: calc(100vh - 61px);
     position: relative;
-    color: #2d132c;
-    font-family: 'Lexend Deca', sans-serif;
   }
-
+    body::after {
+     content: '';
+     display: block;
+     height: 50px;
+  }
   p {
-    color: #2d132c;
+    color: #ffffff;
     font-family: 'Lexend Deca', sans-serif;
     font-size: 24px;
+    text-align: center;
+    margin: 10px auto;
+    margin-top: 80px;
   }
-
-  body::after {
-    content: '';
-    display: block;
-    height: 50px;
-  }
-
-  h1, h2, .main-content {
-    padding: 10px;
-    margin: 10px 10px 20px;
+  h1, h2 {
+    position: relative;
+    top: 50px;
+    margin: 20px 10px;
+    padding: 20px;
+    color: #2d132c;
     background-color: #c72c41;
   }
-
-  .main-content {
-    font-size: 24;
-    margin-bottom: 80px;
-  }
-
   #nav-bar {
     position: fixed;
     display: grid;
@@ -68,7 +63,6 @@
     font-family: Alfa Slab One;
     color: #c72c41;
   }
-
   .gridthing {
     text-align: center;
     padding: 10px 2px;
@@ -77,49 +71,41 @@
     left: 5px;
     color: #c72c41;
   }
-
   .fattext {
     font-size: 100px;
     font-family: 'Lexend Deca', sans-serif;
     text-align: center;
   }
-
   .lessfattext {
     font-size: 50px;
     font-family: 'Lexend Deca', sans-serif;
+    text-align: center;
   }
-
-  .offset {
-    position: relative;
-  }
-
   #footer {
     background-color: #c72c41;
     text-align: center;
     position: absolute;
     margin: 10px;
-    bottom: -32px;
+    bottom: -23px;
     width: calc(100% - 20px);
     height: 50px;
     border-radius: 25px 25px;
   }
-
   #footer p {
     position: relative;
-    bottom: 15px;
-    font-size: 24px;
+    top: 10px;
+    padding: none;
+    margin: 0;
+    color: #2d132c;
   }
-
   a:link {
     text-decoration: none;
   }
   a:visited {
     text-decoration: none;
   }
-
   a:hover {
     text-decoration: underline #801336;
   }
-
   </style>
 </html>
