--- a/contact.html
+++ b/contact.html
@@ -14,8 +14,8 @@
       <a href="contact.html"><div class="gridthing">CONTACT</div></a>
     </div>
     <div class="offset">
-    <h1 class="fattext">CONTACT US</h1>
-    <h2>Call us at:</h2>
+    <h1 class="fattext">CONTACT UPSILAMBA</h1>
+    <h2 class="contact">Call us at:</h2>
     <p class="main-content">1800-your mom sucked my pee pee last night</p>
     </div>
     <div id="footer">
@@ -106,6 +106,11 @@ body {
   }
   a:hover {
     text-decoration: underline #801336;
+  }
+    
+  .contact {
+    width: 33.3%;
+    text-align: center;
   }
   </style>
 </html>
